--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -23,4 +23,14 @@
         android:gravity="center_horizontal"
         android:layout_below="@+id/tv_received_sms"/>
 
+    <TextView
+        android:id="@+id/tv_terms_and_conditions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/terms_and_conditions"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:gravity="center_horizontal"
+        android:layout_below="@+id/tv_privacy_policy"/>
+
 </RelativeLayout>
